--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 
 # Banco de Dados Local
 db.sqlite3
+
+# Arquivos de Cache
+/core/__pycache__/
+/core/migrations/__pycache__/
+
+/lovestories/__pycache__/
